@@ -1,7 +1,7 @@
 /*
-   Copyright (C) 2001-2012, 2014-2017 Free Software Foundation, Inc.
+   Copyright (C) 2001-2012, 2014-2018 Free Software Foundation, Inc.
    Written by Keisuke Nishida, Roger While, Simon Sobisch,
-   Edward Hart, Dave Pitts
+   Edward Hart, Ron Norman, Dave Pitts
 
    This file is part of GnuCOBOL.
 
