@@ -1,10 +1,17 @@
 
+2018-03-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* tree.c: actually handle items of CB_CATEGORY_NATIONAL / PIC_NATIONAL
+	  as national items, not as alphanumeric
+	* reserved.c (function_list): adjustments for CB_CATEGORY_NATIONAL
+	* field.c (validate_any_length_item): adjustments for CB_CATEGORY_NATIONAL
+
 2018-03-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* tree.c (cb_name_1): adjustments for CB_TAG_REPORT/CB_TAG_REPORT_LINE
 	* field.c (check_picture_item): fixed tree cast error for setting
 	  implied size/type for VALUE SPACE
-	
+
 2018-03-05  Ron Norman <rjn@inglenet.com>
 
 	Changes to solve REPORT problems related to COB_TREE_DEBUG
